--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ first div in the grid  and place it in the grid. */
  /* Step 8: Write the selector/rule property to style the .text-block class. */
 
  .text-block {
-    grid-column: 2 / 2; 
+/*     grid-column: 2 / span 1;  */
     max-height: 250px; 
     overflow: auto;
     margin: auto;
